[project]
name = "dash2yas"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Vineet Naik", email = "naikvin@gmail.com" }
]
dependencies = [
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"dash2yas" = "dash2yas:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.24.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dash2yas"]
